# os_homeworks

./: .gitignore  CMakeLists.txt
.cmake/: settings.json
homework_1/: CMakeLists.txt
homework_1/backup/: README.md  backup.c  backup.h  main.c
homework_1/useless/: README.md  example.sh  main.c  useless.c  useless.h
homework_2/: CMakeLists.txt
homework_2/dishwasher/: README.md
homework_2/runsim/: README.md  main.c  runsim.c  runsim.h
lib/: CMakeLists.txt  lib.c  lib.h
